# ENTROPY

./: .env.example  .gitignore  Makefile  README.md  banner.txt  pyproject.toml  test_embeddings_manual.py  test_llm_judge.py  test_llm_judge_embeddings.py
docs/: AI_agent_orchestration_patterns.md
entropy/api/: README.md  __init__.py  main.py  schemas.py
entropy/cli/: README.md  __init__.py  chat.py
entropy/contexts/generation/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agents.py  context_manager.py  decision_logic.py  demo.py  llm_client.py  orchestrator.py  prompts.py  tools.py
entropy/contexts/market_data/: README.md  __init__.py  analytics.py  data_structures.py  signals.py  tools.py
entropy/contexts/news_analysis/: README.md  SecondaryWebScraperIdea.md  __init__.py  aggregates.py  constants.py  data_structures.py  processor.py  sentiment.py
entropy/contexts/retrieval/: README.md  __init__.py  bm25_retrieval.py  embedding_retrieval.py  hybrid_retrieval.py  ingest_20_stocks.py  test_bm25_vs_embeddings.py  yfinance_fetcher.py
entropy/evaluation/: README.md  llm_judge.py  metrics.py  run_evaluation.py  test_queries.py
entropy/prototype/: Huddle_roles_v1.md  README.md  __init__.py  huddle_chat.py  huddle_utils.py  ingest_documents.py  rag_chat.py  simple_chat.py
entropy/utils/: Seans_helpers.py  loader.py  logging.py  spinner.py  web_helpers.py
notebooks/: bm25_demo.ipynb  embedding_demo.ipynb
scripts/: chat.sh  run_api.sh  test_api.py
tests/: BIOMARKER_LOCATIONS.md  README.md  TEST_REPORT_1251.md
tests/fixtures/: conftest.py  mock_data.py
tests/integration/: README.md  test_domain_boundaries.py  test_full_pipeline.py
tests/unit/: test_bm25_retrieval.py  test_embedding_retrieval.py  test_market_data.py  test_metrics.py  test_models.py
