[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "entropy"
version = "0.1.0"
description = "Evaluation of News and Trends: A Retrieval-Optimized Prototype for Yfinance"
authors = [
  { name = "Sean Stafford" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10"

dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    ]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

eval = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "tabulate>=0.9.0",
]

[tool.ruff]
# Exclude commonly ignored directories
exclude = [
    ".cache",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "configs",
    "data",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks",
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E731", "E501"] 
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

# Format code in docstrings
docstring-code-format = true
docstring-code-line-length = "dynamic"