[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "entropy"
version = "0.1.0"
description = "Evaluation of News and Trends: A Retrieval-Optimized Prototype for Yfinance"
authors = [
  { name = "Sean Stafford" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10"

dependencies = [
    # Core financial data
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # RAG and retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",

    # LLM and generation
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "tiktoken>=0.5.0",

    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",

    # Configuration management
    "omegaconf>=2.3.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "curl-cffi>=0.5.9",  # For yfinance session impersonation

    # Data processing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
    "rich>=13.5.0",
]

eval = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "tabulate>=0.9.0",
]

# For users who want to use local embeddings instead of OpenAI
local = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.20.0",
]


[tool.ruff]
# Exclude commonly ignored directories
exclude = [
    ".cache",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "configs",
    "data",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks",
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E731", "E501"] 
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

# Format code in docstrings
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers -m 'not slow' --disable-warnings"
markers = [
    "unit: Unit tests (fast, mocked dependencies)",
    "integration: Integration tests (slower, may use real files)",
    "slow: Tests that take more than 1 second",
    "retrieval: Tests for BM25 and embedding retrieval",
    "metrics: Tests for evaluation metrics",
    "market_data: Tests for market data tools",
]

[tool.coverage.run]
source = ["entropy"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/prototype/*",
    "*/_internal.py",
]